# WS-TERREMOTO-API

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  openapi.yaml  pyproject.toml  requirements.txt
app/: main.py
app/api/: router.py
app/core/: celery_app.py  config.py  errors.py  redis.py  security.py
app/modules/webhook/: api.py  client.py  enums.py  exceptions.py  forward.py  handlers.py  messages.py  outgoing.py  schemas.py  services.py  tasks.py
app/modules/webhook/conversation/: contracts.py  enums.py  inbox.py  messages.py  registry.py  schemas.py  service.py  store.py
app/modules/webhook/features/_template/: README.md  __init__.py  enums.py  feature.py  mapper.py  messages.py  presenter.py  repository.py  schemas.py
app/modules/webhook/features/personas/: __init__.py  enums.py  feature.py  mapper.py  messages.py  presenter.py  repository.py  schemas.py
tests/: conftest.py  test_celery_enqueue.py  test_conversation.py  test_inbox.py  test_personas.py  test_store.py  test_tasks.py  test_webhook.py
