[project]
name = "ws-terremoto-api"
version = "0.1.0"
description = "Webhook multitenant de WhatsApp (pywa) que hace echo del forward de ws-backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.138.1",
    "uvicorn[standard]==0.49.0",
    "gunicorn==26.0.0",
    "uvicorn-worker==0.4.0",
    "pywa==4.2.0",
    "cryptography==49.0.0",
    "pydantic-settings==2.14.2",
    "redis==5.2.1",
]

[dependency-groups]
dev = [
    "ruff==0.15.20",
    "mypy==2.1.0",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "import-linter==2.12",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D", "PL", "UP", "B"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "PLR2004"]
"**/__init__.py" = ["D"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["app", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pywa.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
implicit_reexport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["app/modules/webhook/features/_template/*"]

[tool.importlinter]
root_packages = ["app"]

[[tool.importlinter.contracts]]
name = "Capas: api -> modules -> core"
type = "layers"
layers = ["app.api", "app.modules", "app.core"]

[[tool.importlinter.contracts]]
name = "Los features no tocan client/outgoing"
type = "forbidden"
source_modules = ["app.modules.webhook.features"]
forbidden_modules = [
    "app.modules.webhook.client",
    "app.modules.webhook.outgoing",
]
